# file-tools

./: README.md  pyproject.toml
.config/: Makefile
.github/workflows/: release.yaml  wf.yml
file_convertion_tools/: audio.py  movie.py  speech_to_text.py
test/: concatenate_files.py  test_audio.py  test_concatenate_files.py  test_count_pdf_pages.py  test_csv_to_md.py  test_json_to_yaml.py  test_load_toml.py  test_make_md_table.py  test_movie.py  test_pdf_to_csv_tabula.py  test_seven_zip_utils.py  test_sort_yaml.py  test_txt_to_csv.py
