[tool.poetry]
name = "file-convertion-tools"
version = "0.0.16"
description = "common file conversions"
authors = ["Gustav Rasmussen"]
readme = "README.md"
packages = [{include = "file_convertion_tools"}]

[tool.poetry.dependencies]
moviepy = "^2.1.2"
numpy = "2.3.1"
python = "^3.11"
pandas = "^2.2.3"
pypdf = "^5.1.0"
pyyaml = "^6.0.2"
py7zr = "^0.22.0"
tabula-py = "^2.10.0"
tabulate = "^0.9.0"
imageio = "^2.37.0"
imageio-ffmpeg = "^0.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
